init project : fix bug spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -231,14 +231,14 @@ li.slick-active button::before{
 .section-description__wrap {
   background-color: var(--background-black);
 }
-.select-button__list {
-}
+
 .select-btn__item {
   padding: 15px;
   color: var(--color-gray);
 }
 .description-item {
-  padding: 40px 0;
+  padding-top: 55px;
+  padding-bottom: 80px;
 }
 .text-item {
   font-size: 16px;
@@ -384,7 +384,7 @@ li.slick-active button::before{
     column-count: 3;
   }
   .description-item{
-    padding-top: 50px;
+    padding-top: 56px;
     padding-bottom: 100px;
   }
   .card-first{
